# HaloBlocks

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  run_tests.sh
.github/workflows/: publish.yml  tag_release_on_merge.yml  test.yml
docs/: index.md  tutorial.ipynb
docs/api/: blocks.md  core.md  layers.md
haloblocks/: __init__.py  attention.py  base.py  decoders.py  encoders.py  heads.py  layers.py
haloblocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: tutorial.ipynb
scripts/: format.sh  open_release_pr.sh  run_all_unit_tests.sh
site/: 404.html  index.html  objects.inv
site/api/blocks/: index.html
site/api/core/: index.html
site/api/layers/: index.html
site/search/: search_index.json
site/tutorial/: index.html
src/haloblocks/: __init__.py  layers.py
src/haloblocks/blocks/: __init__.py
src/haloblocks/blocks/attention/: __init__.py  cross_attention.py  gated_attention.py  gqa.py  grouped_query_attention.py  linear_attention.py  masking.py  mha.py  mqa.py  multi_head_latent_attention.py  multi_query_attention.py  scaled_dot_product_attention.py  scaledotprod.py  self_attention.py  sliding_window_attention.py  trinity_attention.py  utils.py
src/haloblocks/blocks/mlp/: __init__.py  mlp.py
src/haloblocks/blocks/moe/: __init__.py  deepseek_moe.py
src/haloblocks/blocks/norm/: __init__.py  rms_norm.py
src/haloblocks/blocks/positional_embedding/: __init__.py  alibi.py  learned.py  rotary.py  sinusoidal.py
src/haloblocks/blocks/transformer/: __init__.py  decoder.py  transformer_block.py
src/haloblocks/blocks/vla/: __init__.py  flow_decoder.py
src/haloblocks/core/: __init__.py  block.py  builder.py  composite.py  factory.py  registry.py
tests/: test_attention.py  test_blocks.py  test_builder.py  test_core.py  test_decoders.py  test_encoders.py  test_heads.py  test_interface.py  test_layers.py  test_mlp.py  test_norm.py  test_normalization.py  test_positional_embedding.py
