[project]
name = "haloblocks"
version = "0.1.1"
description = "A modular neural network component library"
readme = "README.md"
authors = [
    { name = "naveen", email = "basaanithanaveenkumar1998@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0.0",
    "requests>=2.32.5",
    "torch>=2.0.0",
]

[project.scripts]
haloblocks = "haloblocks:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
]
