[project]
name = "haloblocks"
version = "0.1.3"
description = "Modern, modular, composability-first neural network building blocks for PyTorch."
readme = "README.md"
license = "MIT"
authors = [
    { name = "naveen", email = "basaanithanaveenkumar1998@gmail.com" }
]
keywords = [
    "deep-learning",
    "pytorch",
    "transformer",
    "attention",
    "neural-network",
    "mixture-of-experts",
    "composable",
    "building-blocks",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0.0",
    "requests>=2.32.5",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/basaanithanaveenkumar/HaloBlocks"
Repository = "https://github.com/basaanithanaveenkumar/HaloBlocks"
Issues = "https://github.com/basaanithanaveenkumar/HaloBlocks/issues"
Changelog = "https://github.com/basaanithanaveenkumar/HaloBlocks/blob/main/CHANGELOG.md"

[project.scripts]
haloblocks = "haloblocks:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
